// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attrs > aliasing an alternate theme via attrs makes it through to the child component 1`] = `
<div>
  <div
    class="sc-a"
    theme="[object Object]"
  />
</div>
`;

exports[`attrs > does not pass transient props to HTML element 1`] = `
<div>
  <div
    class="sc-a sc-b c"
  />
</div>
`;

exports[`attrs > merge attrs 1`] = `
<div>
  <button
    class="sc-a"
    tabindex="0"
    type="submit"
  />
</div>
`;

exports[`attrs > merge attrs when inheriting SC 1`] = `
<div>
  <button
    class="sc-a sc-b"
    tabindex="0"
    type="submit"
  />
</div>
`;

exports[`attrs > pass a React component 1`] = `
<div>
  <button>
    <p>
      React Component
    </p>
  </button>
</div>
`;

exports[`attrs > pass a simple attr via function with object return 1`] = `
<div>
  <button
    class="sc-a"
    type="button"
  />
</div>
`;

exports[`attrs > pass a simple attr via object 1`] = `
<div>
  <button
    class="sc-a"
    type="button"
  />
</div>
`;

exports[`attrs > pass attrs to style block 1`] = `
<div>
  <a
    class="sc-a b"
    data-active-class-name="--is-active"
    href="#"
  />
</div>
`;

exports[`attrs > pass props to the attr function 1`] = `
<div>
  <button
    class="sc-a"
    type="button"
  />
</div>
`;

exports[`attrs > pass props to the attr function 2`] = `
<div>
  <button
    class="sc-a"
    type="submit"
  />
</div>
`;

exports[`attrs > should apply given "as" prop to the progressive type 1`] = `
<div>
  <video
    class="sc-a"
    loop=""
  />
</div>
`;

exports[`attrs > should merge className 1`] = `
<div>
  <div
    class="sc-a meow nya"
  />
</div>
`;

exports[`attrs > should merge className even if its a function 1`] = `
<div>
  <div
    class="sc-a meow nya"
  />
</div>
`;

exports[`attrs > should merge className even if its a function 2`] = `
<div>
  <div
    class="sc-a meow purr"
  />
</div>
`;

exports[`attrs > should override children of course 1`] = `
<div>
  <div
    class="sc-a"
  >
    <span>
      Amazing
    </span>
  </div>
</div>
`;

exports[`attrs > should pass through children as a normal prop 1`] = `
<div>
  <div
    class="sc-a"
  >
    Probably a bad idea
  </div>
</div>
`;

exports[`attrs > should pass through complex children as well 1`] = `
<div>
  <div
    class="sc-a"
  >
    <span>
      Probably a bad idea
    </span>
  </div>
</div>
`;

exports[`attrs > should replace props with attrs 1`] = `
<div>
  <button
    class="sc-a"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`attrs > should replace props with attrs 2`] = `
<div>
  <button
    class="sc-a"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`attrs > should replace props with attrs 3`] = `
<div>
  <button
    class="sc-a"
    tabindex="0"
    type="button"
  />
</div>
`;

exports[`attrs > should work with data and aria attributes 1`] = `
<div>
  <div
    aria-label="A simple FooBar"
    class="sc-a"
    data-foo="bar"
  />
</div>
`;

exports[`attrs > work fine with a function that returns an empty object 1`] = `
<div>
  <div
    class="sc-a"
  />
</div>
`;

exports[`attrs > work fine with an empty object 1`] = `
<div>
  <div
    class="sc-a"
  />
</div>
`;
